--- a/src/app/news-banner/news-banner.component.html
+++ b/src/app/news-banner/news-banner.component.html
@@ -8,27 +8,27 @@
 
   <!-- Wrapper for slides -->
       <div class="carousel-inner">
-        <div class="item active" style="background-image: url('../../assets/img/sponsors/{{sponsor.Name}}.jpg');" *ngFor="let sponsor of sponsorOfTheWeek">
-          <a href="{{sponsor.URL}}" >
-            <img src="../../assets/img/sponsors/{{sponsor.Name}}.jpg" alt="Chania">
-            <div class="carousel-caption">
-              <h3>{{sponsor.Name}}</h3>
-              <p>Get a {{sponsor.DiscountType}} with the MTSA card</p>
-              <p>{{sponsor.Address}}</p>
-            </div>
-          </a>
-        </div>
+        <!--<div style="background-color: rgba(0, 0, 0, 0.3);">-->
+          <div class="item active" style="background-image: url('../../assets/img/sponsors/{{sponsor.Name}}.jpg');" *ngFor="let sponsor of sponsorOfTheWeek">
+            <a href="{{sponsor.URL}}" >
+              <div class="carousel-caption">
+                <h3>{{sponsor.Name}}</h3>
+                <p>Get a {{sponsor.DiscountType}} with the MTSA card</p>
+                <p>{{sponsor.Address}}</p>
+              </div>
+            </a>
+          </div>
 
-        <div class="item" style="background-image: url('../../assets/img/events/{{event.Name}}.jpg');" *ngFor="let event of upcomingEvents">
-          <a href="{{event.EventURL}}" >
-            <img src="../../assets/img/events/{{event.Name}}.jpg" alt="Chania">
-            <div class="carousel-caption">
-              <h3>{{event.Name}}</h3>
-              <p>When: {{event.Start}} TO {{event.End}} </p>
-              <p>Where: {{ event.Location }}</p>
-            </div>
-          </a>
-        </div>
+          <div class="item" style="background-image: url('../../assets/img/events/{{event.Name}}.jpg');" *ngFor="let event of upcomingEvents">
+            <a href="{{event.EventURL}}" >
+              <div class="carousel-caption">
+                <h3>{{event.Name}}</h3>
+                <p>When: {{event.StartDate}} - {{event.StartTime}} TO {{event.EndDate}} - {{event.EndTime}}</p>
+                <p>Where: {{ event.Location }}</p>
+              </div>
+            </a>
+          </div>
+        <!--</div>-->
     </div>
 
   <!-- Left and right controls -->
